# mandelbrot-video

./: Cargo.toml  params.nat  video.sh
src/: main.rs
src/lib/: mandelbrot.rs
