[package]
name = "complex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
itertools-num = "0.1.3"
threadpool = "1.8.1"
image = "0.24.5"
rug = "1.19.0"
num_cpus = "1.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
gmp-mpfr-sys = { version = "1.5.0", features=["use-system-libs"]}

[target.'cfg(not(target_os = "macos"))'.dependencies]
gmp-mpfr-sys = "1.5.0"

[lib]
name = "mandelbrot"
path = "src/lib/mandelbrot.rs"

[[bin]]
name = "video"
path = "src/main.rs"
